se modifica titulo de reporte 211

--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO-FT-211.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO-FT-211.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO-FT-211" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.7715610000000017"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="124"/>
+	<property name="ireport.y" value="15"/>
 	<parameter name="ciudad" class="java.lang.String"/>
 	<parameter name="año" class="java.lang.String"/>
 	<parameter name="mes" class="java.lang.String"/>
@@ -24,7 +24,7 @@
 				<reportElement x="-19" y="-19" width="595" height="100" forecolor="#009232" backcolor="#009232"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="5" y="15" width="555" height="25" forecolor="#FFFFFF"/>
+				<reportElement x="5" y="13" width="555" height="25" forecolor="#FFFFFF"/>
 				<textElement textAlignment="Center" markup="none">
 					<font size="15" isBold="true"/>
 				</textElement>
@@ -33,9 +33,9 @@
 			<staticText>
 				<reportElement x="5" y="40" width="555" height="20" forecolor="#FFFFFF"/>
 				<textElement textAlignment="Center" markup="none">
-					<font size="15" isBold="true"/>
+					<font size="13" isBold="true"/>
 				</textElement>
-				<text><![CDATA[RESOLUCIÓN DE ADMISIÓN DE PLANCHAS]]></text>
+				<text><![CDATA[DECLARACIÓN PARA ACREDITAR OFICIO Y CUMPLIMIENTO DE REQUISITOS ]]></text>
 			</staticText>
 		</band>
 	</title>
