cambio inicio sesion

--- a/ELE.web/WebRoot/gui/estilos/elec.css
+++ b/ELE.web/WebRoot/gui/estilos/elec.css
@@ -101,7 +101,7 @@ table.border {
 	background-color:#006600;
 }
 .banner {
-	background-image: url('../imagenes/EncabezadoElec2022.png');
+	background-image: url('../imagenes/EncabezadoElec2022.jpg');
 	height: 294px;
 	width: 829px;
 	margin: 0 auto;
