implementacion de descarga reporte 211

--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO-FT-211.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO-FT-211.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO-FT-211" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.7715610000000017"/>
+	<property name="ireport.zoom" value="1.4641000000000013"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="15"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="ciudad" class="java.lang.String"/>
 	<parameter name="año" class="java.lang.String"/>
 	<parameter name="mes" class="java.lang.String"/>
@@ -136,8 +136,8 @@
 				<text><![CDATA[Mod.Septiembre 2021]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="153" y="7" width="270" height="20" forecolor="#FFFFFF"/>
-				<textElement>
+				<reportElement x="130" y="7" width="296" height="20" forecolor="#FFFFFF"/>
+				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
@@ -145,7 +145,7 @@
 			<staticText>
 				<reportElement x="40" y="36" width="106" height="13" forecolor="#009232"/>
 				<textElement/>
-				<text><![CDATA[CO-FT-172]]></text>
+				<text><![CDATA[CO-FT-211]]></text>
 			</staticText>
 		</band>
 	</pageFooter>
